Password reset flow logic/UI
Remove animate class from top panels (forgot.html and reset.html) for smoother animation on state change. Disable reset.html submit button for invalid token. Create reset success/failure feedback UI. Add node-hat for token generation. Update /api/reset get and post routes for token check, one-time use. Create a resetAuth model to separate password resets from user accounts.

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "passport-google-oauth": "latest",
     "bcrypt": "latest",
     "ejs": "latest",
-    "nodemailer": "latest"
+    "nodemailer": "latest",
+    "hat": "latest"
   },
   "devDependencies": {
     "grunt": "latest",
