--- a/package.json
+++ b/package.json
@@ -34,6 +34,11 @@
     "grunt-nodemon": "latest",
     "grunt-concurrent": "latest",
     "grunt-contrib-sass": "latest",
-    "grunt-contrib-clean": "latest"
+    "grunt-contrib-clean": "latest",
+    "grunt-usemin": "latest",
+    "grunt-contrib-copy": "latest",
+    "grunt-contrib-concat": "latest",
+    "grunt-contrib-uglify": "latest",
+    "grunt-contrib-cssmin": "latest"
   }
 }
