--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server/server.js"
   },
-  "version": "0.0.0-0",
+  "version": "0.1.1",
   "private": true,
   "engines": {
     "node": "0.8.x"
